@@ -5,6 +5,8 @@ Tiny fix to the first book preference selection under staff_details.
 
 Small improvement to identifying missing recipients for address labels.
 
+Fix to removing budget reponsibilities.
+
 
 Version ClaSS-0.9.12 release (2009/12/15)
 -----------------------------------------
